git@github.com:guillermobermejo/sbuhackathon2024-frontend.git

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,10 @@
         <link rel="manifest" href="favicon_io/site.webmanifest">
    </head>
    <body>
-        <P>
-            Hello World!
-        </P>
+        <h1>Emergency Queue</h1>        
+        
+        <p>Request the hospital counter for your ID</p>
+        <input type = "text" placeholder= "ID number"/>
+        <button>Check waitlist</button>
     </body>
 </html>
