--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,12 +11,17 @@
         <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
         <link rel="manifest" href="favicon_io/site.webmanifest">
+        <link rel="stylesheet" href = "./assets/main.css">
    </head>
    <body>
         <h1>Emergency Queue</h1>        
         
         <p>Request the hospital counter for your ID</p>
         <input type = "text" placeholder= "ID number"/>
-        <button>Check waitlist</button>
+        <a href = "pages/waitlist.html">
+            <button>Check waitlist</button>
+        </a>
+
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
