--- a/frontend/pages/waitlist.html
+++ b/frontend/pages/waitlist.html
@@ -2,7 +2,7 @@
     <head>
         <title>WaitList</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href = "../../assets/main.css">
+        <link rel="stylesheet" href = "../assets/css/main.css">
     </head>
     <body>
         <h1>WaitList Current Status</h1>
