--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,16 +11,26 @@
         <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
         <link rel="manifest" href="favicon_io/site.webmanifest">
-        <link rel="stylesheet" href = "./assets/main.css">
+        <link rel="stylesheet" href = "./assets/css/main.css">
    </head>
+
+   <header>
+    <h1>Emergency Queue</h1>
+   </header>
+
    <body>
-        <h1>Emergency Queue</h1>        
+        <div id = "infoForm">
+            <form action = "pages/waitlist.html">
+                <div id = "inputSection">
+                    <p>Name</p>
+                    <input type = "text" placeholder="name"/>
+                    <p>Request the hospital counter for your ID</p>
+                    <input type = "text" placeholder= "ID number"/>
+                </div> 
+                <input type = "submit" value = "Check waitlist">
+            </form>  
+        </div>
         
-        <p>Request the hospital counter for your ID</p>
-        <input type = "text" placeholder= "ID number"/>
-        <a href = "pages/waitlist.html">
-            <button>Check waitlist</button>
-        </a>
 
         <script src="assets/js/main.js"></script>
     </body>
