--- a/frontend/pages/waitlist.html
+++ b/frontend/pages/waitlist.html
@@ -4,12 +4,26 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href = "../assets/css/main.css">
     </head>
-    <body>
+    <header>
         <h1>WaitList Current Status</h1>
-        <div>
-            <img src = "../images/icons/person_circle_icon.png" alt = "person_icon" style = "width: 20px; height: 20px">
-            <text>name</text>
-            <text>priority number</text>
+    </header>
+    <body>
+        <div id = "waitlist">
+            <div id = "Me">
+                <img src = "../images/icons/person_circle_icon.png" alt = "person_icon" style = "width: 20px; height: 20px">
+                <text>name</text>
+                <text>priority number</text>
+            </div>
+
+            <p></p>
+        
+            <div id = "others">
+                <img src = "../images/icons/person_circle_icon.png" alt = "person_icon" style = "width: 20px; height: 20px">
+                <text>id</text>
+                <text>priority number</text>
+            </div>
         </div>
+        
+        <a href = "../index.html">Back</a>
     </body>
 </html>
